--- a/Exams/Exam - 03 November 2019/FurnitureStore/Solution/styles.css
+++ b/Exams/Exam - 03 November 2019/FurnitureStore/Solution/styles.css
@@ -8,6 +8,7 @@ html {
 body {
    margin: 0;
    padding: 0;
+   background-color: #f0e4e4;
 }
 
 header {
@@ -44,13 +45,16 @@ i {
 }
 
 .search-btn i {
-    position: absolute;
-    top: 9px;
-    left: 27px;
-    font-size: 14px;
+   position: absolute;
+   top: 9px;
+   left: 27px;
+   font-size: 14px;
 }
 
-.search, .collection {
+.search,
+.collection,
+.items,
+.item {
    display: flex;
 }
 
@@ -62,61 +66,145 @@ input {
 }
 
 .rooms {
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 30px;
-    display: flex;
-    justify-content: space-between;
+   width: 80%;
+   margin: 0 auto;
+   padding-top: 30px;
+   display: flex;
+   justify-content: space-between;
 }
 
 .room {
-    width: 22%;
-    text-align: center;
+   width: 22%;
+   text-align: center;
 }
 
 .room img {
-    width: 100%;
-    height: 230px;
-    object-fit: fill;
+   width: 100%;
+   height: 230px;
+   object-fit: fill;
 }
 
-.room p, .collection-content p {
-    margin-top: 0;
-    color: #8A8486;
+.room p,
+.collection-content p {
+   margin-top: 0;
+   color: #8a8486;
 }
 
-.collection  {
-    width: 80%;
-    margin: 20px auto;
+.collection {
+   width: 80%;
+   margin: 20px auto;
 }
 
 .collection-content {
-    width: 40%;
+   width: 40%;
 }
 
 .collection-content h2 {
-    color: #F93A04;
-    font-size: 28px;
-    margin-bottom: 10px;
+   color: #f93a04;
+   font-size: 28px;
+   margin-bottom: 10px;
 }
 
 .collection-content p {
-    font-size: 12px;
+   font-size: 12px;
 }
 
 .collection-image {
-    width: 60%;
+   width: 60%;
 }
 
 .collection-image img {
-    width: 100%;
+   width: 100%;
 }
 
 button {
-    background-color: #F93700;
-    border: none;
-    color: white;
-    padding: 12px;
-    border-radius: 5px;
+   background-color: #f93700;
+   border: none;
+   color: white;
+   padding: 12px;
+   border-radius: 5px;
 }
 
+.items {
+   width: 80%;
+   justify-content: space-around;
+   margin: 20px auto;
+   background-color: #cac3c3;
+   padding: 30px 40px;
+   box-sizing: border-box;
+}
+
+.item {
+   width: 30%;
+   flex-direction: column;
+   align-items: center;
+}
+
+.item-content {
+   text-align: center;
+}
+
+.item-content h4,
+.item-content p {
+   margin: 5px;
+}
+
+.item-image {
+   width: 50%;
+   text-align: center;
+}
+
+.item-content p {
+   font-size: 14px;
+}
+
+.item-image img {
+   width: 50%;
+   background-color: #e6d6d6;
+   padding: 10px;
+   border-radius: 50%;
+}
+
+footer {
+   width: 80%;
+   margin: 0 auto;
+   color: #848080;
+   display: flex;
+   justify-content: space-between;
+   padding-bottom: 30px;
+}
+
+footer ul {
+   display: flex;
+   padding: 0;
+   align-items: flex-end;
+}
+
+footer ul li {
+   list-style: none;
+   padding-left: 10px;
+}
+
+.footer-social ul {
+   position: relative;
+}
+
+.footer-social li {
+   font-size: 22px;
+   padding: 0;
+}
+
+.footer-nav li:first-child,
+.footer-call li:first-child {
+   font-weight: bold;
+   font-size: 18px;
+}
+
+.footer-call li:nth-child(2) {
+   padding: 5px 40px;
+   background-color: #cac3c3;
+   border-radius: 5px;
+   margin-left: 20px;
+   position: relative;
+   top: 12px;
+}
